
5.72  2015-01-11
  - Added EXPERIMENTAL support for case-insensitive attribute selectors like
    [foo="bar" i] to Mojo::DOM::CSS.
  - Improved Mojo::Reactor::EV to update the current time before starting a
    timer.
  - Fixed whitespace bug in Mojo::DOM::CSS.

5.71  2015-01-01
  - Updated Net::DNS::Native requirement to 0.15 for some important bug fixes.
  - Updated jQuery to version 2.1.3.
  - Improved Mojo::URL performance.
  - Fixed fragment and userinfo normalization bugs in Mojo::URL.
  - Fixed query charset bug in Mojo::URL.
  - Fixed a few merge bugs in Mojo::Parameters.

5.70  2014-12-18
  - Improved Mojo::Template performance.
  - Fixed error handling bugs in Mojo::IOLoop::Stream.
  - Fixed a few limit bugs in Mojo::Message.
  - Fixed Windows bug in Mojo::IOLoop::Client. (OlegG)

5.69  2014-12-13
  - Deprecated Mojo::DOM::siblings.
  - Added following, following_siblings, preceding and preceding_siblings
    methods to Mojo::DOM.
  - Added port method to Mojo::IOLoop::Server.
  - Removed deprecated emit_safe method from Mojo::EventEmitter.
  - Removed deprecated render_static method from Mojolicious::Controller.
  - Removed deprecated has_conditions method from Mojolicious::Routes::Route.
  - Updated Net::DNS::Native requirement to 0.14 for some important bug fixes.
  - Improved Mojo::DOM::HTML performance slightly.
  - Fixed parent combinator bug in Mojo::DOM::CSS.
  - Fixed whitespace bug in Mojo::DOM::HTML.
  - Fixed Mojo::UserAgent::Transactor to handle query parameters more like
    most common browsers.

5.68  2014-12-02
  - Improved Mojo::DOM::CSS performance significantly.
  - Fixed deprecation warnings in get command.
  - Fixed bug in Mojolicious::Controller where sending a WebSocket message
    would cause multiple resume events.

5.67  2014-11-27
  - Improved overall performance by deserializing sessions only on demand.
  - Fixed bug where embedded applications would deserialize sessions twice.

5.66  2014-11-26