@@ -4,6 +4,7 @@
     [foo="bar" i] to Mojo::DOM::CSS.
   - Improved Mojo::Reactor::EV to update the current time before starting a
     timer.
+  - Fixed bug in Mojo::Headers where max_line_size was not checked correctly.
   - Fixed whitespace bug in Mojo::DOM::CSS.
 
 5.71  2015-01-01
